--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,9 @@
 sonar.projectKey=DereticMitarIT92020_IT-09-2020-Deretic-Mitar-Projekat-
 sonar.organization=dereticmitarit92020
-sonar.java.binaries=**/target/classes
+
+sonar.sources=src/main/java/
+sonar.language=java
+sonar.java.binaries=.
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=IT-09-2020-Deretic-Mitar-Projekat-
