--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=DereticMitarIT92020_IT-09-2020-Deretic-Mitar-Projekat-
 sonar.organization=dereticmitarit92020
 
-sonar.sources=src/main/java/
+sonar.sources=IT 09-2020 Deretic Mitar/src/main/java/
 sonar.language=java
 sonar.java.binaries=.
 
